# iot-hub-device-update

./: .gitignore  CMakeLists.txt  README.md  SUPPORT.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: docker-build.yml
docs/agent-reference/: how-to-build-agent-code.md
scripts/: build.sh  install-deps.sh
src/adu_types/inc/aduc/: adu_types.h
src/agent/adu_core_interface/src/: adu_core_interface.c
src/agent/command_helper/src/: command_helper.c
src/agent/src/: health_management.c
src/communication_managers/iothub_communication_manager/src/: iothub_communication_manager.c
src/extensions/content_downloaders/: CMakeLists.txt
src/extensions/content_downloaders/curl_downloader/: curl_content_downloader.cpp
src/extensions/update_manifest_handlers/steps_handler/: README.md
src/rootkey_workflow/: CMakeLists.txt
src/rootkey_workflow/src/: rootkey_workflow.c
src/rootkey_workflow/tests/: main.cpp
src/utils/c_utils/src/: string_c_utils.c
src/utils/config_utils/src/: config_utils.c
src/utils/config_utils/tests/: main.cpp
src/utils/crypto_utils/src/: crypto_lib.c
src/utils/d2c_messaging/: CMakeLists.txt
src/utils/d2c_messaging/src/: d2c_messaging.c
src/utils/d2c_messaging/tests/: CMakeLists.txt
src/utils/eis_utils/tests/: main.cpp
src/utils/extension_utils/src/: extension_utils.c
src/utils/hash_utils/src/: hash_utils.c
src/utils/hash_utils/tests/: hash_utils_ut.cpp
src/utils/path_utils/src/: path_utils.c
src/utils/root_key_utils/src/: root_key_util.c
src/utils/root_key_utils/tests/: main.cpp
src/utils/rootkeypackage_utils/: CMakeLists.txt
src/utils/rootkeypackage_utils/inc/aduc/: rootkeypackage_curl_download.h
src/utils/rootkeypackage_utils/src/: rootkeypackage_curl_download.cpp  rootkeypackage_do_download.cpp  rootkeypackage_download.c
src/utils/rootkeypackage_utils/tests/testapp/: CMakeLists.txt
src/utils/rootkeypackage_utils/tests/testapp/src/: main.cpp
src/utils/url_utils/src/: url_utils.c
tools/download_file/: main.cpp
(+20 files in other folders)
